Làm phần Header

--- a/index.html
+++ b/index.html
@@ -15,6 +15,90 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
 </head>
 <body>
-    
+    <header class="header fixed">
+        <div class="main-content">
+            <div class="body">
+                <!-- Logo -->
+                <a href="#!">
+                    <img src="./assets/img/logo.svg" alt="Besnik." class="logo">
+                </a>
+
+                <!-- Navbar -->
+                <nav class="nav">
+                    <ul>
+                        <li class="active">
+                            <a href="#!">Home</a>
+                        </li>
+                        <li>
+                            <a href="#!">Features</a>
+                        </li>
+                        <li>
+                            <a href="#!">Pricing</a>
+                        </li>
+                        <li>
+                            <a href="#!">About</a>
+                        </li>
+                        <li>
+                            <a href="#!">Contact</a>
+                        </li>
+                    </ul>
+                </nav>
+
+                <!-- Action -->
+                <div class="action">
+                    <a href="#!" class="action-link">Sign in</a>
+                    <a href="#!" class="btn action-btn">Sign up</a>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <main style="height: 5000px;">
+        <!-- Hero -->
+        <div class="hero">
+            <div class="main-content">
+                <div class="body">
+                    <!-- Hero left -->
+                    <div class="content-block">
+                        <p class="sub-title">😎 EASY LEAENING PLATFORM</p>
+                        <h1 class="heading">Words learner come here.</h1>
+                        <p class="desc">
+                            Build skills with courses, certificates, and get online knowledge from our world-class platform.
+                        </p>
+                        <a href="#!" class="btn hero-btn">Get Started</a>
+                    </div>
+
+                    <!-- Hero right -->
+                    <div class="media-block">
+                        <img src="./assets/img/hero-img.jpg" alt="Words learner come here." class="hero-img">
+                        <div class="hero-courses">
+                            <div class="label-block">
+                                <p class="label">Courses 1000+</p>
+                            </div>
+                        </div>    
+                        <div class="hero-schedules">
+                            <p class="label">Schedules</p>
+                            <img src="./assets/icons/schedule-1.svg" alt="Schedules" class="img-1">
+                            <img src="./assets/icons/schedule-2.svg" alt="Schedules" class="img-2">
+                            <img src="./assets/icons/schedule-3.svg" alt="Schedules" class="img-3">
+                            <img src="./assets/icons/schedule-4.svg" alt="Schedules" class="img-4">
+                        </div>
+                        <div class="hero-students">
+                            <p class="label-students">Our Active Students</p>
+                            <div class="students-list">
+                                <img src="./assets/img/hero-student-1.jpg" alt="" class="avatar-student">
+                                <img src="./assets/img/hero-student-2.jpg" alt="" class="avatar-student">
+                                <img src="./assets/img/hero-student-3.jpg" alt="" class="avatar-student">
+                                <img src="./assets/img/hero-student-4.jpg" alt="" class="avatar-student">
+                                <div class="block-student">
+                                    <span class="students">10K+</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
 </html>
