Làm phần Features

--- a/index.html
+++ b/index.html
@@ -99,6 +99,46 @@
                 </div>
             </div>
         </div>
+
+        <!-- Features -->
+        <div class="features">
+            <div class="main-features">
+                <!-- Features top -->
+                <div class="features-top">
+                    <label for="" class="sub-title">F  E  A  T  U  R  E  S</label>
+                    <h2 class="heading">We are providing suitable features for students.</h2>
+                    <p class="desc">Read our awesome feature that is absolutely suit for you. Explore the feature and know the best.</p>
+                </div>
+                
+                <!-- Features list -->
+                <div class="features-list">
+                    <!-- Feature item 1 -->
+                    <div class="feature-item-1">
+                        <div class="background-icon">
+                            <img src="./assets/icons/live-icon.svg" alt="Live Class" class="icon">
+                        </div>
+                        <h3 class="title">Live Class</h3>
+                        <p class="desc">We are providing live classes with the best teacher for you</p>
+                    </div>
+                    <!-- Feature item 2 -->
+                    <div class="feature-item-2">
+                        <div class="background-icon">
+                            <img src="./assets/icons/discuss-icon.svg" alt="Discuss" class="icon">
+                        </div>
+                        <h3 class="title">Discuss</h3>
+                        <p class="desc">Conversation with teachers or another students about task or any other thing</p>
+                    </div>
+                    <!-- Feature item 3 -->
+                    <div class="feature-item-3">
+                        <div class="background-icon">
+                            <img src="./assets/icons/task-icon.svg" alt="Task" class="icon">
+                        </div>
+                        <h3 class="title">Task</h3>
+                        <p class="desc">We give every of our students task for gathering knowledge at home</p>
+                    </div>
+                </div>
+            </div>
+        </div>        
     </main>
 </body>
 </html>
