Làm phần Courses

--- a/index.html
+++ b/index.html
@@ -139,6 +139,64 @@
                 </div>
             </div>
         </div>        
+
+        <!-- Courses -->
+        <div class="courses">
+            <div class="main-content">
+                <div class="courses-top">
+                    <p class="sub-title">C  O  U  R  S  E  S</p>
+                    <h2 class="heading">Popular Courses</h2>
+                    <div class="details">
+                        <p class="desc">Check out our most poular courses that suit for you. Here you can find your favourite one.</p>
+                        <a href="#!" class="link">View All Courses</a>
+                    </div>
+                </div>
+
+                <div class="courses-list">
+                    <!-- Course item 1 -->
+                    <div class="course-item">
+                        <img src="./assets/img/course-1.jpg" alt="Web Design" class="image">
+                        <div class="info">
+                            <h3 class="name-course">Web Design</h3>
+                            <p class="cost">Fee <strong>$200</strong></p>
+                            <p class="desc-course line-clamp">Web design basic to higer level</p>
+                            <div class="limit">
+                                <span class="quantity">40 Classes</span>
+                                <span class="time">3 Months</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Course item 2 -->
+                    <div class="course-item">
+                        <img src="./assets/img/course-2.jpg" alt="Web Development" class="image">
+                        <div class="info">
+                            <h3 class="name-course">Web Development</h3>
+                            <p class="cost">Fee $250</p>
+                            <p class="desc-course line-clamp">Web development basic to higer level</p>
+                            <div class="limit">
+                                <span class="quantity">30 Classes</span>
+                                <span class="time">3 Months</span>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Course item 3 -->
+                    <div class="course-item">
+                        <img src="./assets/img/course-3.jpg" alt="UI/UX Design" class="image">
+                        <div class="info">
+                            <h3 class="name-course">UI/UX Design</h3>
+                            <p class="cost">Fee $350</p>
+                            <p class="desc-course line-clamp">UI/UX design basic to higer level</p>
+                            <div class="limit">
+                                <span class="quantity">50 Classes</span>
+                                <span class="time">4 Months</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
