Làm phần Numbers

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project 2.1</title>
+    <title>Besnik</title>
 
     <!-- Reset CSS -->
     <link rel="stylesheet" href="./assets/css/reset.css">
@@ -65,7 +65,17 @@
                         <p class="desc">
                             Build skills with courses, certificates, and get online knowledge from our world-class platform.
                         </p>
-                        <a href="#!" class="btn hero-btn">Get Started</a>
+                        <div class="hero-cta-block">
+                            <a href="#!" class="btn hero-btn">Get Started</a>
+                            <div class="play-block">
+                                <a href="#!">
+                                    <img
+                                        src="./assets/icons/play-btn.svg"
+                                        alt="play-btn"
+                                    />
+                                </a>
+                            </div>
+                        </div>
                     </div>
 
                     <!-- Hero right -->
@@ -155,9 +165,9 @@
                 <div class="courses-list">
                     <!-- Course item 1 -->
                     <div class="course-item">
-                        <img src="./assets/img/course-1.jpg" alt="Web Design" class="image">
+                        <a href="#!"><img src="./assets/img/course-1.jpg" alt="Web Design" class="image"></a>
                         <div class="info">
-                            <h3 class="name-course">Web Design</h3>
+                            <h3 class="name-course"><a href="#!">Web Design</a></h3>
                             <p class="cost">Fee <strong>$200</strong></p>
                             <p class="desc-course line-clamp">Web design basic to higer level</p>
                             <div class="limit">
@@ -169,10 +179,10 @@
 
                     <!-- Course item 2 -->
                     <div class="course-item">
-                        <img src="./assets/img/course-2.jpg" alt="Web Development" class="image">
+                        <a href="#!"><img src="./assets/img/course-2.jpg" alt="Web Development" class="image"></a>
                         <div class="info">
-                            <h3 class="name-course">Web Development</h3>
-                            <p class="cost">Fee $250</p>
+                            <h3 class="name-course"><a href="#!">Web Development</a></h3>
+                            <p class="cost">Fee <strong>$250</strong></p>
                             <p class="desc-course line-clamp">Web development basic to higer level</p>
                             <div class="limit">
                                 <span class="quantity">30 Classes</span>
@@ -183,16 +193,39 @@
 
                     <!-- Course item 3 -->
                     <div class="course-item">
-                        <img src="./assets/img/course-3.jpg" alt="UI/UX Design" class="image">
+                        <a href="#!"><img src="./assets/img/course-3.jpg" alt="UI/UX Design" class="image"></a>
                         <div class="info">
-                            <h3 class="name-course">UI/UX Design</h3>
-                            <p class="cost">Fee $350</p>
+                            <h3 class="name-course"><a href="#!">UI/UX Design</a></h3>
+                            <p class="cost">Fee <strong>$350</strong></p>
                             <p class="desc-course line-clamp">UI/UX design basic to higer level</p>
                             <div class="limit">
                                 <span class="quantity">50 Classes</span>
                                 <span class="time">4 Months</span>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Numbers -->
+        <div class="numbers">
+            <div class="main-content numbers-container">
+                <div class="body">
+                    <!-- Number item 1 -->
+                    <div class="number-item">
+                        <span class="number-span">100+</span>
+                        <label for="" class="number-label">Popular Courses</label>
+                    </div>
+                    <!-- Number item 2 -->
+                    <div class="number-item">
+                        <span class="number-span">500+</span>
+                        <label for="" class="number-label">Skilled Trainer</label>
+                    </div>
+                    <!-- Number item 3 -->
+                    <div class="number-item">
+                        <span class="number-span">1M+</span>
+                        <label for="" class="number-label">Student Learning</label>
                     </div>
                 </div>
             </div>
