Làm phần Feedback

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <p class="sub-title">😎 EASY LEAENING PLATFORM</p>
                         <h1 class="heading">Words learner come here.</h1>
                         <p class="desc">
-                            Build skills with courses, certificates, and get online knowledge from our world-class platform.
+                            Build skills with courses, certificates, and get online knowledge from our world&#8209;class platform.
                         </p>
                         <div class="hero-cta-block">
                             <a href="#!" class="btn hero-btn">Get Started</a>
@@ -226,6 +226,36 @@
                     <div class="number-item">
                         <span class="number-span">1M+</span>
                         <label for="" class="number-label">Student Learning</label>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Feedback -->
+        <div class="feedback">
+            <div class="main-content">
+                <!-- Feedback left -->
+                <div class="body">
+                    <div class="feedback-content">
+                        <img src="./assets/icons/quotes.svg" alt="Quotes" class="icon-quote">
+                        <blockquote class="line-clamp" style="--line-clamp: 4">“They are the best people. And this is the suitable platform to learn from distance.”</blockquote>
+                        <pre class="author"><strong>Ben Foakes,</strong> student.</pre>
+                        <button class="control-btn">
+                            <img src="./assets/icons/chevron-left.svg" alt="Chevron" class="chevron">
+                        </button>
+                        <button class="control-btn">
+                            <img src="./assets/icons/chevron-right.svg" alt="Chevron" class="chevron">
+                        </button>
+                    </div>
+    
+                    <!-- Feedback right -->
+                    <div class="feedback-image">
+                        <img src="./assets/img/feedback-img-1.jpg" alt="Feedback Image" class="avatar">
+                        <img src="./assets/img/feedback-img-2.jpg" alt="Feedback Image" class="avatar">
+                        <img src="./assets/img/feedback-img-3.jpg" alt="Feedback Image" class="avatar">
+                        <img src="./assets/img/feedback-img-4.jpg" alt="Feedback Image" class="avatar">
+                        <img src="./assets/img/feedback-img-5.jpg" alt="Feedback Image" class="avatar">
+                        <img src="./assets/img/feedback-img-6.jpg" alt="Feedback Image" class="avatar">
                     </div>
                 </div>
             </div>
