Làm phần Ready to Get Admit

--- a/index.html
+++ b/index.html
@@ -260,6 +260,19 @@
                 </div>
             </div>
         </div>
+
+        <!-- CTA -->
+        <div class="action-call">
+            <div class="main-content">
+                <div class="body">
+                    <div class="get-admit">
+                        <h2 class="heading get-heading">Ready to Get Admit</h2>
+                        <p class="desc line-clamp">Create your account and Boost your Career.</p>
+                    </div>                    
+                        <a href="#!" class="btn get-btn">Get Started</a>                   
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
