Làm phần Footer

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
     </header>
 
-    <main style="height: 5000px;">
+    <main>
         <!-- Hero -->
         <div class="hero">
             <div class="main-content">
@@ -273,6 +273,108 @@
                 </div>
             </div>
         </div>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="main-content">
+                <div class="body-footer">
+                    <div class="foot-logo">
+                        <a href="#!">
+                            <img src="./assets/img/logo.svg" alt="" class="logo">
+                        </a>
+                    </div>
+                    <div class="footer-columns">
+                        <!-- Column item 1 -->
+                        <div class="column-item">
+                            <p class="title">Company</p>
+                            <ul>
+                                <li>
+                                    <a href="#!">About</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Careers</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Press</a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <!-- Column item 2 -->
+                        <div class="column-item">
+                            <p class="title">Community</p>
+                            <ul>
+                                <li>
+                                    <a href="#!">Team Plans</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Blog</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Students</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Schoolarships</a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <!-- Column item 3 -->
+                        <div class="column-item">
+                            <p class="title">Teaching</p>
+                            <ul>
+                                <li>
+                                    <a href="#!">Become a teacher</a>
+                                </li>
+                                <li>
+                                    <a href="#!">Teaching academy</a>
+                                </li>
+                            </ul>
+                        </div>
+
+                        <!-- Column item 4 -->
+                        <div class="column-item">
+                            <p class="title">Be social</p>
+                            <ul>
+                                <li>                                  
+                                    <a href="#!">
+                                        <label for="" class="social">
+                                            <img src="./assets/icons/twitter.svg" alt="Twitter" class="icon-social">
+                                        </label>
+                                        Twitter
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#!">
+                                        <label for="" class="social">
+                                            <img src="./assets/icons/facebook.svg" alt="Facebook" class="icon-social">
+                                        </label>
+                                        Facebook
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#!">
+                                        <label for="" class="social">
+                                            <img src="./assets/icons/instagram.svg" alt="Instagram" class="icon-social">
+                                        </label>
+                                        Instagram
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#!">
+                                        <label for="" class="social">
+                                            <img src="./assets/icons/linkedin.svg" alt="Linkedin" class="icon-social">
+                                        </label>
+                                        Linkedin
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="copyright"><p class="desc">© Copyright 2020 by Mayad Ahmed. All right reserved.</p></div>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
