Cải thiện phần Header và thêm Favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Besnik</title>
 
+    <!-- Favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="./assets/favicon/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./assets/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
+
     <!-- Reset CSS -->
     <link rel="stylesheet" href="./assets/css/reset.css">
 
@@ -27,19 +46,19 @@
                 <nav class="nav">
                     <ul>
                         <li class="active">
-                            <a href="#!">Home</a>
+                            <a href="#">Home</a>
                         </li>
                         <li>
-                            <a href="#!">Features</a>
+                            <a href="#features">Features</a>
                         </li>
                         <li>
-                            <a href="#!">Pricing</a>
+                            <a href="#courses">Pricing</a>
                         </li>
                         <li>
-                            <a href="#!">About</a>
+                            <a href="#feedback">About</a>
                         </li>
                         <li>
-                            <a href="#!">Contact</a>
+                            <a href="#contact">Contact</a>
                         </li>
                     </ul>
                 </nav>
@@ -111,7 +130,7 @@
         </div>
 
         <!-- Features -->
-        <div class="features">
+        <div id="features" class="features">
             <div class="main-features">
                 <!-- Features top -->
                 <div class="features-top">
@@ -151,7 +170,7 @@
         </div>        
 
         <!-- Courses -->
-        <div class="courses">
+        <div id="courses" class="courses">
             <div class="main-content">
                 <div class="courses-top">
                     <p class="sub-title">C  O  U  R  S  E  S</p>
@@ -232,7 +251,7 @@
         </div>
 
         <!-- Feedback -->
-        <div class="feedback">
+        <div id="feedback" class="feedback">
             <div class="main-content">
                 <!-- Feedback left -->
                 <div class="body">
@@ -275,7 +294,7 @@
         </div>
 
         <!-- Footer -->
-        <footer class="footer">
+        <footer id="contact" class="footer">
             <div class="main-content">
                 <div class="body-footer">
                     <div class="foot-logo">
