Thêm href phần Logo Header

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="main-content">
             <div class="body">
                 <!-- Logo -->
-                <a href="#!">
+                <a href="#">
                     <img src="./assets/img/logo.svg" alt="Besnik." class="logo">
                 </a>
 
